--- a/src/main/resources/templates/lecturers.html
+++ b/src/main/resources/templates/lecturers.html
@@ -1,46 +1,45 @@
 <!DOCTYPE html>
-<html lang="he"
-      xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layouts/main-layout.html}">
 
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
-            integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
-            crossorigin="anonymous"></script>
-
+    <title>Lecturers</title>
 </head>
 
 <body>
-<div class="container">
-    <div class="row">
-        <h2>Lecturers</h2>
+
+<section layout:fragment="content">
+
+    <div class="container p-3">
+        <div class="row">
+            <h2>Lecturers</h2>
+        </div>
+
+        <table class="table table-striped table-hover table-bordered">
+            <thead class="table-dark">
+            <th>ID</th>
+            <th>Name</th>
+            <th>Last Name</th>
+            <th>Phone</th>
+            <th>Mail</th>
+            </thead>
+            <tbody>
+            <tr th:each="lecturer : ${lecturers}" th:object="${lecturer}">
+                <td th:text="*{id}"></td>
+                <td th:text="*{name}"></td>
+                <td th:text="*{lastName}"></td>
+                <td th:text="*{phone}"></td>
+                <td th:text="*{mail}"></td>
+            </tr>
+            </tbody>
+        </table>
+
+        <div>
+            <a class="btn btn-primary" href="/lecturers/new">Add Lecturer</a>
+        </div>
     </div>
-
-    <table class="table table-striped table-hover table-bordered">
-        <thead class="table-dark">
-        <th>ID</th>
-        <th>Name</th>
-        <th>Last Name</th>
-        <th>Phone</th>
-        <th>Mail</th>
-        </thead>
-        <tbody>
-        <tr th:each="lecturer : ${lecturers}">
-            <td th:text="${lecturer.id}"></td>
-            <td th:text="${lecturer.name}"></td>
-            <td th:text="${lecturer.lastName}"></td>
-            <td th:text="${lecturer.phone}"></td>
-            <td th:text="${lecturer.mail}"></td>
-        </tr>
-        </tbody>
-
-    </table>
-</div>
+</section>
 </body>
 </html>
