--- a/src/main/resources/templates/add_lecturer.html
+++ b/src/main/resources/templates/add_lecturer.html
@@ -12,9 +12,8 @@
 
 
 <section layout:fragment="content">
-
     <div class="container p-3">
-        <div class="row col-md-8 offset-md-2">
+        <div class="row">
             <div class="card">
                 <div class="card-header">
                     <h2 class="text-center">Add Lecturer</h2>
@@ -78,12 +77,37 @@
                                     th:field="*{mail}"
                             />
                         </div>
+
+                        <div class="mb-3 p-3">
+                            <label class="form-label"> Courses </label>
+                            <div th:replace="fragments/courses_add_remove :: courses-add-remove(allCourses=${allCourses}, selectedCourses=${selectedCourses})"></div>
+                        </div>
+
+                        <input
+                                type="hidden"
+                                class="form-control"
+                                id="selectedCoursesIds"
+                                name="coursesIds"
+                        />
+
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
                 </div>
             </div>
         </div>
     </div>
+
+    <script>
+        var origOnUpdate = onUpdate;
+        onUpdate = function() {
+            origOnUpdate();
+            var coursesIdsElem = document.getElementById('selectedCoursesIds');
+            coursesIdsElem.value = selectedCoursesIds.join(',');
+            console.log(coursesIdsElem.value);
+        }
+    </script>
+
+
 </section>
 
 </body>
