--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,6 +12,7 @@
     <div class="container p-4">
         <a class="btn btn-primary" href="/lecturers">Lecturers</a>
         <a class="btn btn-primary" href="/courses">Courses</a>
+        <a class="btn btn-primary" href="/curriculums">Curriculums</a>
     </div>
 </section>
 </body>
