--- a/src/main/resources/templates/add_semester.html
+++ b/src/main/resources/templates/add_semester.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layouts/main-layout.html}">
+      layout:decorate="~{layouts/modal-layout.html}">
 
 <head>
     <meta charset="UTF-8">
@@ -15,17 +15,13 @@
     <!-- dialog-template.html -->
     <div class="modal-content">
         <div class="modal-header">
-            <h5 class="modal-title">Modal Title</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <h5 class="modal-title">New Semester</h5>
+            <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
         </div>
         <div class="modal-body">
             <div th:replace=":: add-semester"></div>
-        </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
         </div>
     </div>
 </section>
@@ -35,35 +31,28 @@
 
     <div class="container p-3">
         <div class="row col-md-8 offset-md-2">
-            <div class="card">
-                <div class="card-header">
-                    <h2 class="text-center">New Semester</h2>
+            <form role="form" method="post" th:action="@{/semesters}" th:object="${newSemester}">
+                <div class="mb-3">
+                    <label class="form-label"> Name </label>
+                    <input
+                            type="text"
+                            class="form-control"
+                            id="name"
+                            name="name"
+                            th:field="*{name}"
+                    />
                 </div>
-                <div class="card-body">
-                    <form role="form" method="post" th:action="@{/semesters}" th:object="${newSemester}">
-                        <div class="mb-3">
-                            <label class="form-label"> ID </label>
-                            <input
-                                    type="text"
-                                    class="form-control"
-                                    id="name"
-                                    name="name"
-                                    th:field="*{name}"
-                            />
-                        </div>
 
-                        <input
-                                type="hidden"
-                                class="form-control"
-                                id="curriculumId"
-                                name="curriculumId"
-                                th:value="${curriculumId}"
-                        />
+                <input
+                        type="hidden"
+                        class="form-control"
+                        id="curriculumId"
+                        name="curriculumId"
+                        th:value="${curriculumId}"
+                />
 
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </form>
-                </div>
-            </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
         </div>
     </div>
 
