--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="he"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+>
 
 <head>
     <meta charset="UTF-8">
@@ -9,9 +11,12 @@
 
 <body>
 
-    <header th:fragment="header" class="p-3 text-center">
-        <h1>Course Management</h1>
-    </header>
+<header th:fragment="header" class="p-3 text-center">
+    <div class="w-100 d-flex justify-content-right">
+        <a th:href="@{/logout}">Logout</a>
+    </div>
+    <h1 class="mt-5">Course Management</h1>
+</header>
 
 </body>
 
