--- a/src/main/resources/templates/add_lecturer.html
+++ b/src/main/resources/templates/add_lecturer.html
@@ -78,6 +78,19 @@
                             />
                         </div>
 
+
+                        <div class="mb-3">
+                            <label class="form-label"> Password </label>
+                            <input
+                                    readonly
+                                    type="text"
+                                    class="form-control"
+                                    id="password"
+                                    name="password"
+                                    th:field="*{password}"
+                            />
+                        </div>
+
                         <div class="mb-3 p-3">
                             <label class="form-label"> Courses </label>
                             <div th:replace="fragments/courses_add_remove :: courses-add-remove(allCourses=${allCourses}, selectedCourses=${selectedCourses})"></div>
