--- a/src/main/resources/templates/add_semester_course.html
+++ b/src/main/resources/templates/add_semester_course.html
@@ -58,7 +58,7 @@
                 </div>
 
                 <div class="mb-3">
-                    <label class="form-label"> Course </label>
+                    <label class="form-label"> Lecturer </label>
                     <select id="lecturerSelect" name="lecturerId">
                         <option th:each="lecturer : ${lecturers}"
                                 th:value="${lecturer.id}"
