--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -9,10 +9,16 @@
 <body>
 
 <section layout:fragment="content">
-    <div class="container p-4">
-        <a class="btn btn-primary" href="/lecturers">Lecturers</a>
-        <a class="btn btn-primary" href="/courses">Courses</a>
-        <a class="btn btn-primary" href="/curriculums">Curriculums</a>
+    <div class="container mt-4 p-4 row">
+        <div class="col p-4">
+            <a class="btn btn-primary p-4" href="/lecturers">Lecturers</a>
+        </div>
+        <div class="col p-4">
+            <a class="btn btn-primary p-4" href="/courses">Courses</a>
+        </div>
+        <div class="col p-4">
+            <a class="btn btn-primary p-4" href="/curriculums">Curriculums</a>
+        </div>
     </div>
 </section>
 </body>
