--- a/src/main/resources/templates/lecturer.html
+++ b/src/main/resources/templates/lecturer.html
@@ -11,9 +11,14 @@
 <section layout:fragment="content">
     <div class="container p-4">
         <h3>Welcome [[${lecturer.name}]]</h3>
-        <div class="mt-5">
-            <a class="btn btn-primary" href="/lecturer/courses">My Courses</a>
-            <a class="btn btn-primary" href="/lecturer/curriculums">Curriculums</a>
+        <br>
+        <div class="row mt-5">
+            <div class="col p-4">
+                <a class="btn btn-primary p-5" href="/lecturer/courses">My Courses</a>
+            </div>
+            <div class="col p-4">
+                <a class="btn btn-primary p-5" href="/lecturer/curriculums">Curriculums</a>
+            </div>
         </div>
     </div>
 </section>
