--- a/src/main/resources/templates/layouts/main-layout.html
+++ b/src/main/resources/templates/layouts/main-layout.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title layout:title-pattern="$LAYOUT_TITLE - $CONTENT_TITLE">Helloooooo</title>
+    <title layout:title-pattern="$LAYOUT_TITLE - $CONTENT_TITLE">Course Management</title>
 
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -23,6 +23,10 @@
     <!-- Add Bootstrap JS and jQuery scripts (required for Bootstrap components) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+
+
 
 
     <style>
